--- a/NeurIPS模板/references.bib
+++ b/NeurIPS模板/references.bib
@@ -228,4 +228,27 @@
   primaryClass  = {cs.CL}
 }
 
+% Datasets
+@article{rae2019compressive,
+  title         = {Compressive Transformers for Long-Range Sequence Modelling},
+  author        = {Rae, Jack W. and Potapenko, Anna and Jayakumar, Siddhant M. and Lillicrap, Timothy P.},
+  journal       = {arXiv preprint arXiv:1911.05507},
+  year          = {2019},
+  eprint        = {1911.05507},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.LG},
+  url           = {https://arxiv.org/abs/1911.05507}
+}
+
+@article{merity2016pointer,
+  title         = {Pointer Sentinel Mixture Models},
+  author        = {Merity, Stephen and Xiong, Caiming and Bradbury, James and Socher, Richard},
+  journal       = {arXiv preprint arXiv:1609.07843},
+  year          = {2016},
+  eprint        = {1609.07843},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CL},
+  url           = {https://arxiv.org/abs/1609.07843}
+}
+
 
